--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
       <fieldset class="newsletter">
         <legend>Newsletter</legend><br>
         <p class="small-margin">Select the newsletters you would like to recieve</p>
-        <input type="checkbox" value="html_news"><label>HTML News</label><br>
-        <input type="checkbox" value="css_news"><label>CSS News</label><br>
-        <input type="checkbox" value="javascript_news"><label>Javascript News</label><br>
+        <input type="checkbox" value="html_news" id="html"><label for="html">HTML News</label><br>
+        <input type="checkbox" value="css_news" id="css"><label for="css">CSS News</label><br>
+        <input type="checkbox" value="javascript_news" id="js"><label for="js">Javascript News</label><br>
         <p>Newsletter format</p>
-        <input type="radio" value="html_format"><label>HTML</label><br>
-        <input type="radio" value="text_format"><label>Plain Text</label>
+        <input type="radio" value="html_format" id="html_format"><label for="html_format">HTML</label><br>
+        <input type="radio" value="text_format" id="plain_format"><label for="plain_format">Plain Text</label>
         <p>Other topics you'd like to hear about</p>
         <textarea></textarea><br>
         <input type="button" value="Sign Up" name="sign_up">
